fix : recipe : overflow is not hidden anymore

--- a/recipe/recipe.css
+++ b/recipe/recipe.css
@@ -1,8 +1,13 @@
+body {
+    width: auto;
+    overflow : auto;
+}
+
 section {
     padding : 50px 0; /* reduce the top padding */
 }
 
-#main_title { /* reduce the title size */
+#main_title { 
     text-align: center;
     font-size: 3rem;
     color: whitesmoke;
@@ -16,10 +21,19 @@ section {
 }
 
 ion-icon {
-    color: white;
-    background-color: white;
+    color: black;
+    background-color: rgba(255,255,255,.4);
     height: 2em;
     width: 2em;
     border-radius: 0.5em;
 }
+
+h2 {
+    font-size : 2.5rem;
+    font-weight : 700;
+    text-transform : uppercase;
+    text-align : center;
+    margin : auto;
+    white-space : nowrap;
+    padding-bottom : 13px;
 }
